# projects

cppprojects/: armstrongnumber.cpp  operator_cpp.md  primenumber.cpp  run.sh
cprojects/: primenumber.c  run.sh
javagame/: .project  settings.gradle
javagame/app/: .project
javagame/app/src/test/java/org/example/: AppTest.java
javaprojects/: BinarySearch.java  sample.java
leetcode/: twosum.cpp  twosum.java
opengl/: CMakeLists.txt
opengl/src/: main.cpp
rustprojects/: armstrongnumber  armstrongnumber.rs  primenumber.rs  primenumber_methods.rs  run.sh  rustcompiler.md
rustsamplecli/: Cargo.toml
rustsamplecli/src/: main.rs
rustshell/: Cargo.toml
rustshell/src/: main.rs
